--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="container">
     <div class="row mt-5">
         <div class="col">
-        <h1>Search Movie Database</h1>
+        <h1 class="text-center">Search Movie Database</h1>
         </div>
     </div>
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-md-8">
         <div class="input-group mb-3">
             <input type="text" class="form-control input-key" placeholder="Search movie..." aria-describedby="button-addon2" />
